# ryos

./: .dockerignore  .env.example  .gitignore  .mise.toml  .vercelignore  .version  AGENTS.md  CHANGELOG.md  CODEBASE_AUDIT.md  CODE_QUALITY_AUDIT.md  DESIGN_SYSTEM_AUDIT.md  Dockerfile  LICENSE  LOC_REPORT.md  NEXTSTEP.md  README.md  SETUP.md  bun.lockb  docker-compose.yml  electron-builder.yml  eslint.config.js  index.html  middleware.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
.audit-handoff/: README.md  de.md  en.md  es.md  fr.md  it.md  ja.md  ko.md  pt.md  ru.md  zh-TW.md
.cursor/: CLOUD.md  environment.json  worktrees.json
.github/: copilot-instructions.md  dependabot.yml
_api/: admin.ts  applet-ai.ts  audio-transcribe.ts  chat.ts  ie-generate.ts  iframe-check.ts  link-preview.ts  lyrics.ts  parse-title.ts  share-applet.ts  speech.ts  youtube-search.ts
api/: _status.ts  admin.ts  applet-ai.ts  og.tsx  (+26 more)
src-tauri/: Cargo.toml  Info.plist  README.md  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/plugins/tauri-plugin-ios-push/: Cargo.toml  README.md  build.rs
src-tauri/plugins/tauri-plugin-ios-push/ios/Sources/: IosPushPlugin.swift
src-tauri/plugins/tauri-plugin-ios-push/permissions/: default.toml
src-tauri/plugins/tauri-plugin-ios-push/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ios/app/: AppDelegate.swift
(+3998 files in other folders)
